# calculadorita

./: .gitignore  README.md  calculadorita.in  local.sh  meson.build
calculadorita/: application.py  constants.py
calculadorita/widgets/: main_window.py
data/: application.css  calculadorita.desktop  calculadorita.metainfo.xml  calculadorita.metainfo.xml.in  css.gresource.xml  gschema.xml
src/: App.vala  Constants.vala
src/utils/: Engine.vala
src/widgets/: MainWindow.vala
vapi/: libmatheval.vapi
